--- a/templates/base.html
+++ b/templates/base.html
@@ -167,9 +167,9 @@ a.button:hover {
             <li><a href="{% url 'resume' %}">Resume</a></li>
         </ul>
     </div>
-    <div class="profile-image">
-    <img src="{% static 'image/Me.png' %}" alt="Profile" class="profile-image" style="width: 200px; height: 300px; margin-top: 150px; margin-left: 80px;">
-    </div>  
+    {% comment %} <div class="profile-image">
+    <img src="{% static 'Me.png' %}" alt="Profile" class="profile-image" style="width: 200px; height: 300px; margin-top: 150px; margin-left: 80px;">
+    </div>   {% endcomment %}
     
     <div class="container">
         
