--- a/templates/home.html
+++ b/templates/home.html
@@ -12,18 +12,18 @@
     <h1>CONTACT</h1>
     <p><strong>Email:</strong> {{ email }}</p>
     <p><strong>Phone:</strong> {{ phone }}</p>
-    {% comment %} <p><strong>Linked In:</strong> <a href="https://www.linkedin.com/in/punnavajhala-nagasrisreya-02521b32b/" target="_blank">LinkedIn</a></p> {% endcomment %}
-    {% comment %} <p><strong>Git Hub:</strong> <a href="https://github.com/nagasrisreya/" target="_blank">GitHub</a></p> {% endcomment %}
+    <p><strong>Linked In:</strong> <a href="https://www.linkedin.com/in/punnavajhala-nagasrisreya-02521b32b/" target="_blank">LinkedIn</a></p> 
+    <p><strong>Git Hub:</strong> <a href="https://github.com/nagasrisreya/" target="_blank">GitHub</a></p> 
     
-    <div class="social-links">
+    {% comment %} <div class="social-links">
         <a href="https://github.com/nagasrisreya" target="_blank" title="GitHub">
-            <img src="{% static 'image/git.png' %}" alt="GitHub" class="social-icon"style="width: 60px; height: 50px; margin-top: 5px; margin-left: 0px;">
+            <img src="{% static 'git.png' %}" alt="GitHub" class="social-icon"style="width: 60px; height: 50px; margin-top: 5px; margin-left: 0px;">
             </a>
             <a href="https://www.linkedin.com/in/punnavajhala-nagasrisreya-02521b32b/" target="_blank" title="LinkedIn">
-            <img src="{% static 'image/linkedin.png' %}" alt="Linkedin" class="social-icon" style="width: 50px; height: 50px; margin-top: 5px; margin-left: 10px;">
+            <img src="{% static 'linkedin.png' %}" alt="Linkedin" class="social-icon" style="width: 50px; height: 50px; margin-top: 5px; margin-left: 10px;">
             </a>
         <br>
-    </div><br>
+    </div><br> {% endcomment %}
     <p style="text-align: center;">&copy; 2024 P.Nagasri.Sreya. All rights reserved.</p>
     </footer>
     
